imported covidVaccinces data via pandas into mysql

--- a/covid-database-loader.ipynb
+++ b/covid-database-loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "81b3b048",
    "metadata": {},
    "outputs": [],
@@ -13,20 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "4fbc78c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "df= pd.read_csv('covidDeaths.csv')\n",
-    "dataFrame = pd.DataFrame(df)\n",
+    "dataFrame = pd.DataFrame(df2)\n",
     "my_con = create_engine('mysql+pymysql://root:12345678@localhost/covid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d69e46bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dataFrame.to_sql('covidDeaths',my_con)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "20a0fd01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv('covidVaccinations.csv')\n",
+    "dataFrame2 = pd.DataFrame(df2)\n",
+    "my_con = create_engine('mysql+pymysql://root:12345678@localhost/covid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3e4ae7af",
    "metadata": {},
    "outputs": [
     {
@@ -35,20 +58,19 @@
        "236386"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataFrame.to_sql('covidDeaths',my_con)\n",
-    "    "
+    "dataFrame.to_sql('covidVaccinations',my_con)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a0fd01",
+   "id": "5266c98e",
    "metadata": {},
    "outputs": [],
    "source": []
